# biosimintel

./: .env.example  .gitignore  =2.0  BIOSIM_BLUEPRINT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 20250422_0137_initial_schema.py  20260422_2201_5853b13607d0_add_sec_filings_table.py  20260422_2324_2a79a1bf08f0_fix_sandoz_cik.py  20260423_0036_5c5a5a8b9a6d_fix_dr_reddys_cik_and_delete_bad_filings.py  20260423_0043_05a2f3098ad4_fix_sandoz_cik_to_correct_value.py  20260423_2328_57262dc9f349_add_indication_heatmap_support.py  20260424_0058_167a8a771f1a_add_predictive_intelligence_and_llm_.py  20260424_0111_4b0461de3bb0_extend_llm_cache_key_length.py  20260424_2105_4e3aed1cc707_add_briefing_preferences_to_molecules.py  20260425_1505_356849a3d003_add_geo_intelligence_tables.py  20260425_1520_c6362beb3933_add_combo_tracking.py  20260425_1646_529a9aaa7e91_add_geo_signals.py  20260425_1717_61f57e3f1c04_add_email_preferences.py  20260425_1731_2393ab056ab4_add_noise_signals.py  20260425_2132_19862056e634_add_ema_epar_polls.py  20260425_2201_eb5b61b3dd69_add_signals_created_at_to_ema_epar_.py  20260426_0035_95b77a180751_add_openfda_polls.py  20260426_0056_35891142a96b_add_pubmed_polls.py  20260426_1242_3899bbde8883_add_uspto_patentsview_polls.py  20260426_1254_7480bc600546_add_epo_ops_polls.py  20260426_1323_1f46d2d80202_add_who_ictrp_polls.py  20260426_1351_0533ffe570f2_add_press_release_ingestion.py  20260426_1425_63533aa7df89_add_eu_ctis_scrapes.py  20260426_1548_674edc2375a3_add_social_media_noise.py
app/: main.py
app/core/: auth.py  config.py  exceptions.py  logging.py
app/db/: capability_seed.py  combo_seed.py  email_seed.py  geo_seed.py  seed_data.py  seeds.py  session.py
app/models/: __init__.py  combo.py  competitor.py  data_provenance.py  ema_epar.py  email_pref.py  epo.py  eu_ctis.py  event.py  geo.py  llm_insight_cache.py  (+15 more)
docker/: Dockerfile
docs/: railway_cron_architecture.md
scripts/: audit_ciks.py  backfill_competitor_mapping.py  backfill_indications.py  ingest_new_molecules.py  run_checks.py  seed_competitors_phase4.py  seed_molecules.py  seed_molecules_phase4.py  seed_patent_cliffs.py  send_alert_briefings.py  send_weekly_briefings.py
tests/: conftest.py
(+153 files in other folders)
