[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biosim"
version = "0.1.0"
description = "Deterministic-first, AI-reasoning-only competitive intelligence platform for pharmaceutical biosimilar monitoring"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg>=3.2",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "python-json-logger>=2.0",
    "tenacity>=9.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2",
    "sentry-sdk[fastapi]>=2.14",
    "rapidfuzz>=3.9",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "httpx>=0.27",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-redis>=4.6",
    "faker>=28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["factory.*", "faker.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.models.*", "app.services.ingestion.*", "app.services.ai.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG", "PGH", "PIE", "RUF"]
ignore = ["E501", "B008", "N818"]

[tool.ruff.lint.pydocstyle]
convention = "google"
